[package]
name = "ats-monitoring"
version = "1.4.0"
edition = "2021"
authors = ["Stepanov Denis <stepanov.d.m@yandex.ru>"]
description = "Application for monitoring and reporting of engineering systems, sending notifications via Telegram-bot, API SMS gateway."
license = "Apache-2.0"
repository = "https://github.com/stepanov-denis/ats-monitoring/"
keywords = ["scada", "notifications", "smart", "ats"]
documentation = "https://docs.rs/ats-monitoring"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.1"
timer = "0.2.0"
chrono = "0.4.19"
reqwest = { version = "0.11.4", features = ["blocking"] }
error-chain = "0.12.4"
online = { version = "3.0.1",  default-features = false, features = ["sync"] }
modbus-iiot = "0.2.0"
skytable = "0.6.2"
log = "0.4.14"
env_logger = "0.9.0"
teloxide = { version = "0.9", features = ["macros", "auto-send"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
